--- a/app/src/main/res/layout/item_tarea.xml
+++ b/app/src/main/res/layout/item_tarea.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="8dp"
+    android:layout_margin="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -9,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="start|center">
+        android:gravity="start|center"
+        android:padding="4dp">
 
         <TextView
             android:id="@+id/tvTareaCarta"
@@ -35,16 +38,16 @@
             android:id="@+id/cbCompletado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="end|center"
-            android:buttonTint="#000000"/>
+            android:layout_weight="1"
+            app:buttonTint="@color/black" />
 
         <Button
             android:id="@+id/btBorrarTarea"
             style="?attr/materialIconButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="gdfgdfgfd"
+            android:contentDescription="botonEliminar"
             app:icon="@drawable/ic_borrar"
             app:iconTint="@color/black" />
 
@@ -53,7 +56,7 @@
             style="?attr/materialIconButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="gdfgdfgfd"
+            android:contentDescription="botonEditar"
             app:icon="@drawable/ic_editar"
             app:iconTint="@color/black" />
 
